--- a/front-store/package.json
+++ b/front-store/package.json
@@ -10,10 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@headlessui/react": "^2.0.1",
+    "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^1.0.6",
+    "@material-tailwind/react": "^2.1.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
