--- a/front-store/package.json
+++ b/front-store/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^1.0.6",
     "@material-tailwind/react": "^2.1.9",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/forms": "^0.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
