--- a/front-store/package.json
+++ b/front-store/package.json
@@ -13,12 +13,16 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^1.0.6",
     "@material-tailwind/react": "^2.1.9",
+    "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.1.0",
-    "react-router-dom": "^6.23.0",
+    "react-icons": "^5.2.1",
+    "react-image-gallery": "^1.3.0",
+    "react-rater": "^6.0.5",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
     "tw-elements-react": "^1.0.0-alpha2"
