--- a/front-store/package.json
+++ b/front-store/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
+    "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
@@ -24,6 +25,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-slick": "^0.30.2",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tw-elements-react": "^1.0.0-alpha2"
   },
