--- a/front-store/package.json
+++ b/front-store/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^1.0.6",
     "@material-tailwind/react": "^2.1.9",
+    "@mui/material": "^5.15.19",
     "@reduxjs/toolkit": "^2.2.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
